@@ -3,6 +3,8 @@ Version: 3.3.1
 Date: ????
   Changes:
     - Updated Korean locale (by x2605) (#101)
+  Bugfixes:
+    - Fixed a crash when the first item group has no visible members in visual search (#102)
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.0
 Date: 2022-03-01
